Project ReConnectMindHealth_Risk {
  database_type: "MySQL"
  Note: "ERD Module Đánh giá Rủi ro & Nhật ký"
}

Enum journal_type {
  THOUGHT_RECORD
  FREE_JOURNAL
}

Enum patient_status {
  STABLE
  AT_RISK
  CRISIS
}

Table patient_profiles {
  user_id uuid [pk]
}

Table daily_risk_logs {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
}

Table journals {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
  journal_type journal_type [not null]
}
